# Binary_Merkle_Tree_Rust

./: Cargo.toml  README.md
src/: main.rs  parse_example.rs  utils.rs
