[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
ndarray = "0.15.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha3 = "0.10.8"
